implement multiple target

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,28 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0d1df3bf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-09 00:11:34.399664: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-09 00:11:34.472963: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-09 00:11:34.473044: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-09 00:11:34.483176: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-09 00:11:34.515067: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-09 00:11:35.194714: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend\n",
       "0.9.0\n",
       "2.15.0\n",
       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
@@ -35,7 +21,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 2126341863695784567\n",
+      "incarnation: 14255622379788178534\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -45,7 +31,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 10567636848090176042\n",
+      "incarnation: 6772838774289346517\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
       "xla_global_id: 416903419\n",
       "]\n",
@@ -177,33 +163,27 @@
       "  Install to:                    /home/primarina314/anaconda3/envs/mrs3\n",
       "-----------------------------------------------------------------\n",
       "\n",
-      "\n"
+      "\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-09 00:11:36.871142: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 17:09:10.063436: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:36.893519: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 17:09:10.063508: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:36.893579: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 17:09:10.063529: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:36.898707: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 17:09:10.063701: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:36.898740: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 17:09:10.063717: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2025-05-09 17:09:10.063742: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:36.898753: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:37.026017: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:37.026167: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:37.026183: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2025-05-09 00:11:37.026247: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-09 00:11:37.026319: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2025-05-09 17:09:10.063753: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -219,6 +199,7 @@
     "import keras\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import *\n",
+    "import mrs3 as mr\n",
     "\n",
     "print(keras_cv.__version__)\n",
     "print(keras.__version__)\n",
@@ -1092,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd2c7a5c",
    "metadata": {},
    "outputs": [
@@ -1158,47 +1139,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "efa3eab7",
+   "execution_count": 4,
+   "id": "0280d908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "len(l)\n",
+    "l.append([])\n",
+    "l[0].append(3324)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "56fade08",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "473831\n",
-      "512809\n",
-      "512809\n",
-      "512809\n",
-      "512809\n",
-      "512809\n"
+      "[3324]\n"
      ]
     }
    ],
    "source": [
-    "img = cv2.imread('Lenna_(test_image).png')\n",
-    "print(os.path.getsize('Lenna_(test_image).png'))\n",
+    "print(l[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7992b0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours = []\n",
+    "contour_num = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c7dc3ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(contours) == contour_num:\n",
+    "    contours.append([])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a9007e36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours[contour_num].append('asdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77a4732a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "765\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [3,23,5,4756,876,5446,765]\n",
+    "print(l[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1a6ce652",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdf\n",
+      "xcvfzvcx\n"
+     ]
+    }
+   ],
+   "source": [
+    "if l:\n",
+    "    print('asdf')\n",
     "\n",
-    "cv2.imwrite('lenna_1.png', img, [cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_DEFAULT,cv2.IMWRITE_PNG_COMPRESSION, 9])\n",
-    "print(os.path.getsize('lenna_lv9.png'))\n",
-    "\n",
-    "cv2.imwrite('lenna_2.png', img, [cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_FILTERED,cv2.IMWRITE_PNG_COMPRESSION, 9])\n",
-    "print(os.path.getsize('lenna_lv9.png'))\n",
-    "\n",
-    "cv2.imwrite('lenna_3.png', img, [cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_HUFFMAN_ONLY,cv2.IMWRITE_PNG_COMPRESSION, 9])\n",
-    "print(os.path.getsize('lenna_lv9.png'))\n",
-    "\n",
-    "cv2.imwrite('lenna_4.png', img, [cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_RLE,cv2.IMWRITE_PNG_COMPRESSION, 9])\n",
-    "print(os.path.getsize('lenna_lv9.png'))\n",
-    "\n",
-    "cv2.imwrite('lenna_5.png', img, [cv2.IMWRITE_PNG_STRATEGY, cv2.IMWRITE_PNG_STRATEGY_FIXED,cv2.IMWRITE_PNG_COMPRESSION, 9])\n",
-    "print(os.path.getsize('lenna_lv9.png'))\n"
+    "r = []\n",
+    "if r:\n",
+    "    print('zxcv')\n",
+    "else:\n",
+    "    print('xcvfzvcx')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0280d908",
+   "id": "3f97e4af",
    "metadata": {},
    "outputs": [],
    "source": []
