--- a/main.ipynb
+++ b/main.ipynb
@@ -253,28 +253,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "59c0fdcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.312225103378296\n"
+     ]
+    }
+   ],
    "source": [
+    "import cv2\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "\n",
     "img = cv2.imread('Lenna_(test_image).png')\n",
-    "scaler = 2\n",
     "\n",
     "sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
-    "sr.readModel(f'models/EDSR_x{scaler}.pb')\n",
+    "sr.readModel(f'models/EDSR_x4.pb')\n",
+    "\n",
     "# GPU 가속화를 위한 설정\n",
     "sr.setPreferableBackend(cv2.dnn.DNN_BACKEND_CUDA)\n",
     "sr.setPreferableTarget(cv2.dnn.DNN_TARGET_CUDA)\n",
     "\n",
-    "sr.setModel('edsr', scaler)\n",
+    "sr.setModel('edsr', 4)\n",
     "\n",
-    "img = cv2.imread('Lenna_(test_image).png')\n",
+    "t1 = time.time()\n",
     "result = sr.upsample(img)\n",
     "\n",
+    "t2 = time.time()\n",
+    "print(t2 - t1)\n",
+    "\n",
     "cv2.imshow('Original Image', img)\n",
+    "cv2.imshow('Super Resolution Image', result)\n",
     "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cf9f653e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('Original Image', img)\n",
     "cv2.imshow('Super Resolution Image', result)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -1278,7 +1305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3",
+   "display_name": "mrs3exp",
    "language": "python",
    "name": "python3"
   },
