--- a/blending.ipynb
+++ b/blending.ipynb
@@ -15,37 +15,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-12 17:28:44.643126: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-12 17:28:44.767482: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-12 17:28:44.767569: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-12 17:28:44.785138: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-12 17:28:44.838443: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-12 17:28:45.550077: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend\n"
+      "True\n",
+      "NVIDIA GeForce RTX 3060\n",
+      "1\n",
+      "91000\n"
      ]
     }
    ],
    "source": [
     "# from desktop w/ gpu\n",
-    "import tensorflow as tf\n",
+    "import torch\n",
     "import numpy as np\n",
     "import cv2\n",
     "import time\n",
     "import os\n",
     "from enum import Enum\n",
-    "import keras_cv\n",
-    "import keras\n",
-    "import matplotlib.pyplot as plt\n",
     "from multipledispatch import dispatch\n",
     "import mrs3 as mr\n",
     "import interpolation as inter\n",
@@ -53,12 +40,18 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "lenna_path = 'Lenna_(test_image).png'\n"
+    "lenna_path = 'Lenna_(test_image).png'\n",
+    "\n",
+    "print(torch.cuda.is_available())\n",
+    "print(torch.cuda.get_device_name(device = 0))\n",
+    "print(torch.cuda.device_count())\n",
+    "print(torch.backends.cudnn.version())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27769fc9",
    "metadata": {},
    "outputs": [
@@ -77,8 +70,6 @@
     "import time\n",
     "import os\n",
     "from enum import Enum\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
     "from PIL import Image\n",
     "from utils import *\n",
     "\n",
@@ -90,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d19d7ae1",
    "metadata": {},
    "outputs": [
@@ -100,23 +91,33 @@
      "text": [
       "original file: 864398\n",
       "downscaled filesize: 219310\n",
-      "roi filesize: 140258\n",
-      "roi bin filesize: 1703\n",
-      "config filesize: 204\n",
-      "compression ratio: 0.41818120819344795\n"
+      "roi filesize: 53734\n",
+      "roi bin filesize: 557\n",
+      "config filesize: 97\n",
+      "compression ratio: 0.3166342356183147\n"
      ]
     }
    ],
    "source": [
+    "import mrs3 as mr\n",
+    "\n",
     "mr.compress_img_mult_tgs('sample-images-png/1920x1080.png', 'results', scaler=4, roi_mode=mr.ROI_POLYGON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b42c0944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7361390590667725 sec taken\n"
+     ]
+    }
+   ],
    "source": [
     "mr.restore_img_mult_tgs('results', mr.EDSR, 'results')"
    ]
@@ -1728,7 +1729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3",
+   "display_name": "mrs3exp",
    "language": "python",
    "name": "python3"
   },
