--- a/divideInto.ipynb
+++ b/divideInto.ipynb
@@ -13,38 +13,13 @@
    "execution_count": 1,
    "id": "aaa92d0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-12 20:55:18.015566: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-12 20:55:18.229713: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-12 20:55:18.229790: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-12 20:55:18.262881: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-12 20:55:18.337053: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-12 20:55:19.082169: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
     "import numpy as np\n",
     "import cv2\n",
     "import time\n",
     "import os\n",
     "from enum import Enum\n",
-    "import keras_cv\n",
-    "import keras\n",
-    "import matplotlib.pyplot as plt\n",
     "from multipledispatch import dispatch\n",
     "import mrs3 as mr\n",
     "import interpolation as inter\n",
@@ -283,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "f126a9cf",
    "metadata": {},
    "outputs": [],
@@ -312,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "c787dcb8",
    "metadata": {},
    "outputs": [
@@ -321,42 +296,28 @@
      "output_type": "stream",
      "text": [
       "upscaled without fraction\n",
-      "5.500750780105591 sec taken\n"
+      "6.589867115020752 sec taken\n",
+      "upscaled after being divided into 32 fragments.\n",
+      "83.81987524032593 sec taken\n"
      ]
     }
    ],
    "source": [
-    "b = mr.upscale_large_img(lenna_img, 4)"
+    "b = mr.upscale_large_img(lenna_img, 4)\n",
+    "\n",
+    "c = mr.upscale_large_img(b, 4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9df8563d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2048, 2048, 3)\n",
-      "(8192, 8192, 3)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(a.shape)\n",
-    "print(b.shape)"
+    "imshow(lenna_img)\n",
+    "imshow(b)\n",
+    "imshow(c)"
    ]
   },
   {
@@ -555,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3",
+   "display_name": "mrs3exp",
    "language": "python",
    "name": "python3"
   },
