adjust upscale_large_img. without sr reload

--- a/divideInto.ipynb
+++ b/divideInto.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "aaa92d0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
@@ -258,16 +267,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f126a9cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lenna_img = cv2.imread(lenna_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "acb9b350",
    "metadata": {},
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c787dcb8",
    "metadata": {},
    "outputs": [
@@ -296,24 +295,33 @@
      "output_type": "stream",
      "text": [
       "upscaled without fraction\n",
-      "6.589867115020752 sec taken\n",
+      "7.1623194217681885 sec taken\n",
       "upscaled after being divided into 32 fragments.\n",
-      "83.81987524032593 sec taken\n"
+      "79.98715162277222 sec taken\n"
      ]
     }
    ],
    "source": [
-    "b = mr.upscale_large_img(lenna_img, 4)\n",
+    "lenna_img = cv2.imread(lenna_path)\n",
     "\n",
+    "b = mr.upscale_large_img(lenna_img, 4)\n",
     "c = mr.upscale_large_img(b, 4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "9df8563d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Dropped Escape call with ulEscapeCode : 0x03007703\n"
+     ]
+    }
+   ],
    "source": [
     "imshow(lenna_img)\n",
     "imshow(b)\n",
@@ -322,25 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b3269804",
+   "execution_count": 9,
+   "id": "536bc2cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3)\n",
-      "(2, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ar = np.array([[3,4,5],\n",
-    "               [1,9,0]])\n",
-    "ar2 = np.zeros_like(ar)\n",
-    "print(ar.shape)\n",
-    "print(ar2.shape)"
+    "for _ in range(20):\n",
+    "    imshow(c)"
    ]
   },
   {
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "703441d1",
    "metadata": {},
    "outputs": [
@@ -416,7 +412,7 @@
        "16"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
