--- a/main.ipynb
+++ b/main.ipynb
@@ -1127,7 +1127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3exp",
+   "display_name": "mrs3",
    "language": "python",
    "name": "python3"
   },
@@ -1141,7 +1141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
