--- a/main.ipynb
+++ b/main.ipynb
@@ -1118,8 +1118,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2ee56421",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread('Lenna_(test_image).png')\n",
+    "print(img.itemsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d842bf5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pynvml\n",
+    "pynvml.nvmlInit()\n",
+    "device_count = pynvml.nvmlDeviceGetCount()\n",
+    "\n",
+    "print(device_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2874cf4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0: NVIDIA GeForce RTX 3060\n",
+      "Memory Total: 12288.00 MB\n",
+      "Memory Used: 2329.94 MB\n",
+      "Memory Free: 9958.06 MB\n",
+      "GPU Utilization: 16%\n",
+      "Memory Utilization: 24%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(device_count):\n",
+    "    handle = pynvml.nvmlDeviceGetHandleByIndex(i)\n",
+    "    name = pynvml.nvmlDeviceGetName(handle)\n",
+    "    memory_info = pynvml.nvmlDeviceGetMemoryInfo(handle)\n",
+    "    utilization = pynvml.nvmlDeviceGetUtilizationRates(handle)\n",
+    "    \n",
+    "    print(f\"GPU {i}: {name.decode('utf-8')}\")\n",
+    "    print(f\"Memory Total: {memory_info.total / 1024**2:.2f} MB\")\n",
+    "    print(f\"Memory Used: {memory_info.used / 1024**2:.2f} MB\")\n",
+    "    print(f\"Memory Free: {memory_info.free / 1024**2:.2f} MB\")\n",
+    "    print(f\"GPU Utilization: {utilization.gpu}%\")\n",
+    "    print(f\"Memory Utilization: {utilization.memory}%\")\n",
+    "    print()\n",
+    "\n",
+    "# NVML 종료\n",
+    "pynvml.nvmlShutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d13e29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "free_memory = torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0)\n",
+    "\n",
+    "# print(f\"Free GPU Memory: {free_memory / 1024 ** 2:.2f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1633a443",
    "metadata": {},
    "outputs": [],
    "source": []
