--- a/without-reload.ipynb
+++ b/without-reload.ipynb
@@ -16,6 +16,9 @@
     "import configparser\n",
     "import interpolation as inter\n",
     "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "\n",
     "ROI_RECTANGLE = 0\n",
     "ROI_POLYGON = 1\n",
@@ -514,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "26c5d839",
    "metadata": {},
    "outputs": [
@@ -523,7 +526,7 @@
      "output_type": "stream",
      "text": [
       "upscaled after being divided into 16 fragments.\n",
-      "25.751695156097412 sec taken\n"
+      "25.34834623336792 sec taken qqqqq\n"
      ]
     }
    ],
@@ -542,23 +545,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1436aa54",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name '_upscaled_fraction_num' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 36\u001b[39m\n\u001b[32m     33\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m     35\u001b[39m img = cv2.imread(\u001b[33m'\u001b[39m\u001b[33mLenna_(test_image).png\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m upscaled = \u001b[43m_upscale_img_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m cv2.imshow(\u001b[33m'\u001b[39m\u001b[33mtest\u001b[39m\u001b[33m'\u001b[39m, upscaled)\n\u001b[32m     38\u001b[39m cv2.waitKey(\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36m_upscale_img_test\u001b[39m\u001b[34m(img, scaler)\u001b[39m\n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mglobal\u001b[39;00m _upscaled_fraction_num\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m \u001b[43m_upscaled_fraction_num\u001b[49m += \u001b[32m1\u001b[39m\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[31mNameError\u001b[39m: name '_upscaled_fraction_num' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def _upscale_img_test(img, scaler):\n",
     "    \"\"\"\n",
