--- a/divideInto.ipynb
+++ b/divideInto.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "aaa92d0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
@@ -295,9 +286,9 @@
      "output_type": "stream",
      "text": [
       "upscaled without fraction\n",
-      "7.1623194217681885 sec taken\n",
+      "7.298156976699829 sec taken qqqqq\n",
       "upscaled after being divided into 32 fragments.\n",
-      "79.98715162277222 sec taken\n"
+      "67.01304268836975 sec taken qqqqq\n"
      ]
     }
    ],
