--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0d1df3bf",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3",
+   "display_name": "mrs3exp",
    "language": "python",
    "name": "python3"
   },
@@ -1244,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
