add pack files feature

--- a/main.ipynb
+++ b/main.ipynb
@@ -43,6 +43,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "91e9fc8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Dropped Escape call with ulEscapeCode : 0x03007703\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original file: 325420\n",
+      "downscaled filesize: 31065\n",
+      "roi filesize: 31597\n",
+      "roi bin filesize: 638\n",
+      "config filesize: 149\n",
+      "compression ratio: 0.19497572368016716\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_mult_tgs('Downloads/500x500.png', 'testf', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ac49116a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3286669254302979 sec taken\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.restore_img_mult_tgs('testf', mr.EDSR, 'testf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d7aa64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "51b8786c",
    "metadata": {},
@@ -1230,7 +1286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3exp",
+   "display_name": "mrs3tmp",
    "language": "python",
    "name": "python3"
   },
