--- a/pkg.ipynb
+++ b/pkg.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8e40b6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "NVIDIA GeForce RTX 3060\n",
+      "1\n",
+      "91000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from desktop w/ gpu\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import time\n",
+    "import os\n",
+    "from enum import Enum\n",
+    "from multipledispatch import dispatch\n",
+    "import mrs3 as mr\n",
+    "import interpolation as inter\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "lenna_path = 'Lenna_(test_image).png'\n",
+    "\n",
+    "print(torch.cuda.is_available())\n",
+    "print(torch.cuda.get_device_name(device = 0))\n",
+    "print(torch.cuda.device_count())\n",
+    "print(torch.backends.cudnn.version())\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ce3c4ba5",
    "metadata": {},
@@ -10,7 +51,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "be4f32ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original file: 325420\n",
+      "downscaled filesize: 31065\n",
+      "roi filesize: 34880\n",
+      "roi bin filesize: 764\n",
+      "config filesize: 149\n",
+      "compression ratio: 0.20545141663081556\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_mult_tgs('Downloads/500x500.png', 'testf', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bb5eaf65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.078644037246704 sec taken\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.restore_img_mult_tgs('testf', mr.EDSR, 'testf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "782efd1a",
+   "metadata": {},
+   "source": [
+    "compress 이후에 packaging 처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "94d8995c",
    "metadata": {},
    "outputs": [],
@@ -74,18 +164,18 @@
     "                f_out.write(file_data)\n",
     "\n",
     "# 사용 예시 ---------------------------------------------------\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     # 파일 패키징\n",
-    "#     pack_files(\n",
-    "#         output_file=\"combined.pkg\",\n",
-    "#         input_files=[\"sample.png\", \"settings.ini\"]\n",
-    "#     )\n",
-    "    \n",
-    "#     # 파일 복원\n",
-    "#     unpack_files(\n",
-    "#         input_file=\"combined.pkg\",\n",
-    "#         output_dir=\"restored_files\"\n",
-    "#     )\n"
+    "\n",
+    "# 파일 패키징\n",
+    "pack_files(\n",
+    "    output_file=\"combined.pkg\",\n",
+    "    input_files=[\"/home/primarina314/Projects/MRS3/testf/bin0.png\", \"/home/primarina314/Projects/MRS3/testf/bin1.png\", \"/home/primarina314/Projects/MRS3/testf/roi0.png\", \"/home/primarina314/Projects/MRS3/testf/roi1.png\", \"/home/primarina314/Projects/MRS3/testf/downscaled.png\", \"/home/primarina314/Projects/MRS3/testf/config.ini\"]\n",
+    ")\n",
+    "\n",
+    "# 파일 복원\n",
+    "unpack_files(\n",
+    "    input_file=\"combined.pkg\",\n",
+    "    output_dir=\"restored_files\"\n",
+    ")\n"
    ]
   },
   {
