--- a/webdriver.ipynb
+++ b/webdriver.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "aecbe77a",
    "metadata": {},
    "outputs": [
@@ -322,22 +322,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1st step completed\n"
-     ]
-    },
-    {
-     "ename": "InvalidArgumentException",
-     "evalue": "Message: invalid argument: File not found : ~/Projects/MRS3/sample-images-png/447x372.png\n  (Session info: chrome=137.0.7151.55)\nStacktrace:\n#0 0x560a40d4d44a <unknown>\n#1 0x560a40819d60 <unknown>\n#2 0x560a40862866 <unknown>\n#3 0x560a4088fd32 <unknown>\n#4 0x560a4085dcd8 <unknown>\n#5 0x560a4088fefe <unknown>\n#6 0x560a408b5c6a <unknown>\n#7 0x560a4088fb03 <unknown>\n#8 0x560a4085c5c4 <unknown>\n#9 0x560a4085d221 <unknown>\n#10 0x560a40d1372f <unknown>\n#11 0x560a40d177e8 <unknown>\n#12 0x560a40cfa9d2 <unknown>\n#13 0x560a40d17f8e <unknown>\n#14 0x560a40ce1dbe <unknown>\n#15 0x560a40d3b1f8 <unknown>\n#16 0x560a40d3b408 <unknown>\n#17 0x560a40d4bee8 <unknown>\n#18 0x7fadc7f46ac3 <unknown>\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mInvalidArgumentException\u001b[39m                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 40\u001b[39m\n\u001b[32m     37\u001b[39m upload_input = wait.until(EC.presence_of_element_located(\n\u001b[32m     38\u001b[39m     (By.XPATH, \u001b[33m\"\u001b[39m\u001b[33m//input[@type=\u001b[39m\u001b[33m'\u001b[39m\u001b[33mfile\u001b[39m\u001b[33m'\u001b[39m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)))\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# upload_input.send_keys(\"/home/primarina314/Projects/MRS3/sample-images-png/447x372.png\")  # 실제 경로로 변경 필요\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m \u001b[43mupload_input\u001b[49m\u001b[43m.\u001b[49m\u001b[43msend_keys\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m~/Projects/MRS3/sample-images-png/447x372.png\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 실제 경로로 변경 필요\u001b[39;00m\n\u001b[32m     42\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33m2nd step completed\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     44\u001b[39m \u001b[38;5;66;03m# 3. 옵션 선택 (예시: 라디오 버튼)\u001b[39;00m\n\u001b[32m     45\u001b[39m \u001b[38;5;66;03m# option_xpath = \"//input[@name='processingOption' and @value='Very High']\"\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/mrs3tmp/lib/python3.11/site-packages/selenium/webdriver/remote/webelement.py:231\u001b[39m, in \u001b[36mWebElement.send_keys\u001b[39m\u001b[34m(self, *value)\u001b[39m\n\u001b[32m    228\u001b[39m             remote_files.append(\u001b[38;5;28mself\u001b[39m._upload(file))\n\u001b[32m    229\u001b[39m         value = \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m.join(remote_files)\n\u001b[32m--> \u001b[39m\u001b[32m231\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_execute\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    232\u001b[39m \u001b[43m    \u001b[49m\u001b[43mCommand\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSEND_KEYS_TO_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtext\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeys_to_typing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mvalue\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys_to_typing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\n\u001b[32m    233\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/mrs3tmp/lib/python3.11/site-packages/selenium/webdriver/remote/webelement.py:395\u001b[39m, in \u001b[36mWebElement._execute\u001b[39m\u001b[34m(self, command, params)\u001b[39m\n\u001b[32m    393\u001b[39m     params = {}\n\u001b[32m    394\u001b[39m params[\u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m._id\n\u001b[32m--> \u001b[39m\u001b[32m395\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_parent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/mrs3tmp/lib/python3.11/site-packages/selenium/webdriver/remote/webdriver.py:354\u001b[39m, in \u001b[36mWebDriver.execute\u001b[39m\u001b[34m(self, driver_command, params)\u001b[39m\n\u001b[32m    352\u001b[39m response = \u001b[38;5;28mself\u001b[39m.command_executor.execute(driver_command, params)\n\u001b[32m    353\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[32m--> \u001b[39m\u001b[32m354\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43merror_handler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    355\u001b[39m     response[\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m._unwrap_value(response.get(\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    356\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/mrs3tmp/lib/python3.11/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001b[39m, in \u001b[36mErrorHandler.check_response\u001b[39m\u001b[34m(self, response)\u001b[39m\n\u001b[32m    227\u001b[39m         alert_text = value[\u001b[33m\"\u001b[39m\u001b[33malert\u001b[39m\u001b[33m\"\u001b[39m].get(\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    228\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m229\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[31mInvalidArgumentException\u001b[39m: Message: invalid argument: File not found : ~/Projects/MRS3/sample-images-png/447x372.png\n  (Session info: chrome=137.0.7151.55)\nStacktrace:\n#0 0x560a40d4d44a <unknown>\n#1 0x560a40819d60 <unknown>\n#2 0x560a40862866 <unknown>\n#3 0x560a4088fd32 <unknown>\n#4 0x560a4085dcd8 <unknown>\n#5 0x560a4088fefe <unknown>\n#6 0x560a408b5c6a <unknown>\n#7 0x560a4088fb03 <unknown>\n#8 0x560a4085c5c4 <unknown>\n#9 0x560a4085d221 <unknown>\n#10 0x560a40d1372f <unknown>\n#11 0x560a40d177e8 <unknown>\n#12 0x560a40cfa9d2 <unknown>\n#13 0x560a40d17f8e <unknown>\n#14 0x560a40ce1dbe <unknown>\n#15 0x560a40d3b1f8 <unknown>\n#16 0x560a40d3b408 <unknown>\n#17 0x560a40d4bee8 <unknown>\n#18 0x7fadc7f46ac3 <unknown>\n"
+      "1st step completed\n",
+      "2nd step completed\n",
+      "3rd step completed\n",
+      "4th step completed\n",
+      "5th step completed\n",
+      "6th step completed\n",
+      "7th step completed\n"
      ]
     }
    ],
@@ -353,7 +344,7 @@
     "\n",
     "\n",
     "# 다운로드 경로 설정\n",
-    "DOWNLOAD_DIR = os.path.join(os.getcwd(), \"/home/primarina314/Downloads\")\n",
+    "DOWNLOAD_DIR = os.path.join(os.getcwd(), \"/home/primarina314/Projects/MRS3/Downloads\")\n",
     "# os.makedirs(DOWNLOAD_DIR, exist_ok=True)\n",
     "\n",
     "# Chrome 옵션 설정\n",
@@ -380,8 +371,7 @@
     "    # 2. 이미지 업로드\n",
     "    upload_input = wait.until(EC.presence_of_element_located(\n",
     "        (By.XPATH, \"//input[@type='file']\")))\n",
-    "    # upload_input.send_keys(\"/home/primarina314/Projects/MRS3/sample-images-png/447x372.png\")  # 실제 경로로 변경 필요\n",
-    "    upload_input.send_keys(\"~/Projects/MRS3/sample-images-png/447x372.png\")  # 실제 경로로 변경 필요\n",
+    "    upload_input.send_keys(\"/home/primarina314/Projects/MRS3/sample-images-png/447x372.png\")  # 실제 경로로 변경 필요\n",
     "\n",
     "    print('2nd step completed')\n",
     "    \n",
@@ -466,34 +456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6a5f2389",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1st step completed\n",
-      "2nd step completed\n",
-      "3rd step completed\n",
-      "4th step completed\n",
-      "5th step completed\n",
-      "6th step completed\n",
-      "7th step completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import utils\n",
-    "utils.compress_imgpresso('/home/primarina314/Projects/MRS3/sample-images-png/447x372.png', '/home/primarina314/Downloads')\n",
+    "utils.compress_imgpresso('/home/primarina314/Projects/MRS3/sample-images-png/500x500.png', '/home/primarina314/Projects/MRS3/Downloads/')\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7095383b",
+   "id": "301955b8",
    "metadata": {},
    "outputs": [],
    "source": []
