packaging mrs3 outputs

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0d1df3bf",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "True\n",
       "NVIDIA GeForce RTX 3060\n",
       "1\n",
@@ -91,11 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "82d7aa64",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original filesize: 325420\n",
+      "downscaled filesize: 31065\n",
+      "roi filesize: 36042\n",
+      "roi bin filesize: 893\n",
+      "config filesize: 203\n",
+      "total filesize: 68203\n",
+      "compression ratio: 0.20958453690615206\n",
+      "pkg file: 68343\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_pkg('Downloads/500x500.png', 'testpkg', filename='lenna.pkg', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
   },
   {
    "cell_type": "code",
