adopting other compress

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0d1df3bf",
    "metadata": {},
    "outputs": [
@@ -30,6 +30,7 @@
     "from multipledispatch import dispatch\n",
     "import mrs3 as mr\n",
     "import interpolation as inter\n",
+    "import utils\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -114,6 +115,51 @@
    ],
    "source": [
     "mr.compress_img_pkg('Downloads/500x500.png', 'testpkg', filename='lenna.pkg', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0512eaa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original filesize: 325420\n",
+      "downscaled filesize: 31065\n",
+      "roi filesize: 38008\n",
+      "roi bin filesize: 996\n",
+      "config filesize: 203\n",
+      "total filesize: 70272\n",
+      "compression ratio: 0.21594247434085181\n",
+      "pkg file: 57623\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_pkg_imgpresso('Downloads/500x500.png', 'testpkgimgpresso', filename='lenna.pkg', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "243fd7e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1770727060414234\n",
+      "0.8199994307832422\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(57623/325420)\n",
+    "print(57623/70272)"
    ]
   },
   {
