--- a/main.ipynb
+++ b/main.ipynb
@@ -46,37 +46,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "91e9fc8f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Dropped Escape call with ulEscapeCode : 0x03007703\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original file: 325420\n",
-      "downscaled filesize: 31065\n",
-      "roi filesize: 31597\n",
-      "roi bin filesize: 638\n",
-      "config filesize: 149\n",
-      "compression ratio: 0.19497572368016716\n"
+      "original filesize: 1489508\n",
+      "downscaled filesize: 87345\n",
+      "roi filesize: 269123\n",
+      "roi bin filesize: 1126\n",
+      "config filesize: 96\n",
+      "total filesize: 357690\n",
+      "compression ratio: 0.24013969713489286\n"
      ]
     }
    ],
    "source": [
-    "mr.compress_img_mult_tgs('Downloads/500x500.png', 'testf', scaler=4, roi_mode=mr.ROI_POLYGON)"
+    "mr.compress_img_mult_tgs('Downloads/screenshot.png', 'testf', scaler=4, roi_mode=mr.ROI_POLYGON)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "ac49116a",
    "metadata": {},
    "outputs": [
@@ -84,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3286669254302979 sec taken\n"
+      "2.9365286827087402 sec taken\n"
      ]
     }
    ],
@@ -94,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "82d7aa64",
    "metadata": {},
    "outputs": [
@@ -160,6 +154,73 @@
    "source": [
     "print(57623/325420)\n",
     "print(57623/70272)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d0488444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original filesize: 1489508\n",
+      "downscaled filesize: 87345\n",
+      "roi filesize: 278691\n",
+      "roi bin filesize: 1185\n",
+      "config filesize: 96\n",
+      "total filesize: 367317\n",
+      "compression ratio: 0.24660290512034846\n",
+      "pkg file: 367393\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_pkg('Downloads/screenshot.png', 'testpkg', filename='screenshot.pkg', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aab73317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original filesize: 864398\n",
+      "downscaled filesize: 219310\n",
+      "roi filesize: 119632\n",
+      "roi bin filesize: 1608\n",
+      "config filesize: 152\n",
+      "total filesize: 340702\n",
+      "compression ratio: 0.3941494543023006\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.compress_img_mult_tgs('sample-images-png/1920x1080.png', 'testf', scaler=4, roi_mode=mr.ROI_POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b9dc68a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7017974853515625 sec taken\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr.restore_img_mult_tgs('testf', mr.EDSR, 'testf')"
    ]
   },
   {
