--- a/blending.ipynb
+++ b/blending.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27769fc9",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.12.0-dev\n"
+      "4.11.0\n"
      ]
     }
    ],
@@ -72,6 +72,7 @@
     "from enum import Enum\n",
     "from PIL import Image\n",
     "from utils import *\n",
+    "import mrs3 as mr\n",
     "\n",
     "print(cv2.__version__)\n",
     "\n",
@@ -1727,7 +1728,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3exp",
+   "display_name": "mrs3",
    "language": "python",
    "name": "python3"
   },
@@ -1741,7 +1742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
