--- a/main.ipynb
+++ b/main.ipynb
@@ -46,6 +46,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1c6efff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from laptop w/o gpu\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import time\n",
+    "import os\n",
+    "from enum import Enum\n",
+    "from PIL import Image\n",
+    "from utils import *\n",
+    "import mrs3 as mr\n",
+    "\n",
+    "print(cv2.__version__)\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "91e9fc8f",
    "metadata": {},
@@ -1412,7 +1443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mrs3tmp",
+   "display_name": "mrs3",
    "language": "python",
    "name": "python3"
   },
@@ -1426,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
